<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".view.fragments.login.SignInFragment">

    <TextView
        android:id="@+id/tvSignInStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tv_authorization_margin_bottom"
        android:singleLine="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/tv_forgotpassword_textsize"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/cardview_width"
        android:layout_height="@dimen/cardview_height"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        app:cardElevation="@dimen/cardview_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="517dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_margin_left"
                android:layout_marginTop="@dimen/cardview_signin_margin_top"
                android:layout_marginEnd="@dimen/cardview_margin_right"
                android:text="@string/signin_title_uppercase"
                android:textColor="@color/black"
                android:textSize="@dimen/cardview_signin_text_size"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                style="@style/Widget.App.TextInputLayout.OutlinedCutOffCorners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_margin_left"
                android:layout_marginTop="@dimen/tf_username_margin_top"
                android:layout_marginEnd="@dimen/cardview_margin_right"
                android:hint="@string/tf_username_hint"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
                app:startIconDrawable="@drawable/ic_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.App.TextInputLayout.OutlinedCutOffCorners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_margin_left"
                android:layout_marginTop="@dimen/tf_password_margin_top"
                android:layout_marginEnd="@dimen/cardview_margin_right"
                android:hint="@string/tf_password_hint"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/tilUserName"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_margin_left"
                android:layout_marginEnd="@dimen/cardview_margin_right"
                android:gravity="end"
                android:text="@string/tv_forgotpassword"
                android:textColor="@color/background_gradient_stop"
                android:textSize="@dimen/tv_forgotpassword_textsize"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

            <Button
                android:id="@+id/btSignIn"
                style="@style/Widget.App.Button.ContainedCufOffCorners"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_signin_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/cardview_margin_left"
                android:layout_marginTop="@dimen/bt_signin_margin_top"
                android:layout_marginEnd="@dimen/cardview_margin_right"
                android:text="@string/signin_title_uppercase"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ll_signup_button_margin_top"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_account_absent"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_do_not_have_account_text_size" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tv_signup_button_margin_left"
            android:text="@string/tv_sign_up_button"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_do_not_have_account_text_size"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>