<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".view.fragments.maps.nested.RouteFragment">

    <TextView
        android:id="@+id/tvSignedInUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/map_right_side_buttons_margin"
        app:layout_constraintBottom_toBottomOf="@+id/fabSignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fabSignOut" />

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mvYandex"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/map_left_side_buttons_margin"
        android:layout_marginTop="@dimen/map_top_buttons_margin"
        android:text="@string/fab_back"
        android:textAlignment="center"
        app:icon="@drawable/ic_angle_bracket_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/FabShapeStyleBack"
        android:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_marginEnd="@dimen/map_right_side_buttons_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fabDatePicker"
        app:layout_constraintEnd_toStartOf="@+id/fabDatePicker"
        app:layout_constraintTop_toTopOf="@+id/fabDatePicker"
        android:text="@string/tv_selected_date"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/map_right_side_buttons_margin"
        android:layout_marginTop="@dimen/map_fab_calendar_top_margin"
        app:icon="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabSignOut"
        app:shapeAppearanceOverlay="@style/FabShapeSquareWithRoundCorners"
        android:backgroundTint="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabZoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/map_right_side_buttons_margin"
        android:layout_marginBottom="@dimen/map_fab_zoom_indent"
        app:icon="@drawable/ic_zoom_in"
        app:layout_constraintBottom_toTopOf="@+id/fabZoomOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabSignOut"
        app:layout_constraintVertical_chainStyle="packed"
        android:backgroundTint="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabZoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/map_fab_zoom_indent"
        android:layout_marginEnd="@dimen/map_right_side_buttons_margin"
        app:icon="@drawable/ic_zoom_out"
        app:layout_constraintBottom_toTopOf="@+id/fabRouteStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabZoomIn"
        app:layout_constraintVertical_chainStyle="packed"
        android:backgroundTint="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabRouteStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/map_right_side_buttons_margin"
        android:layout_marginBottom="@dimen/map_bottom_buttons_margin"
        android:text="@string/fab_route_start"
        app:icon="@drawable/ic_current_location_splashscreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>